Fix: Overflow UI Mobile Bug

--- a/src/client/assets/style/_reset.scss
+++ b/src/client/assets/style/_reset.scss
@@ -20,4 +20,9 @@ html, body, #__nuxt, #__layout {
   height: 100%;
   width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
+}
+
+.index {
+  overflow-y: hidden;
 }
